# UTETY

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: audit-bite-4-web-2026-07-13.md  audit-final-loop-2026-07-14.md  audit-independent-opus-2026-07-14.md  build-plan.md  ci.md  early-stage-gaps-2026-07-14.md  full-audit-2026-07-13.md  governmental-scale.md  handoff-2026-07-14.txt  map-to-fleet-audit.md  research-brief-1-verification.md  research-brief-2-verification.md  research-brief-2.md  research-brief.md
tests/: test_boundaries.py  test_consent_adoption.py  test_content.py  test_knowledge.py  test_loop.py  test_mastery.py  test_no_egress.py  test_store.py  test_web.py
utety/: __init__.py  knowledge.py
utety/content/: __init__.py  model.py  register.py
utety/content/courses/: __init__.py  neva_and_theo.py
utety/core/: README.md  __init__.py  consent_backend.py  loop.py  mastery.py  store.py
utety/subject_consent/: __init__.py  core.py
utety/web/: __init__.py  render.py  server.py
