[project]
name = "utety"
version = "0.0.1"
description = "UTETY — the classroom-grade pedagogy + trust layer (local-first, stdlib-only)"
license = "Apache-2.0"
requires-python = ">=3.11"
# Runtime dependencies are deliberately EMPTY: utety is stdlib-only
# (Termux/Windows parity; nothing to install on a child's device).
# tests/test_boundaries.py enforces this — do not add entries casually.
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"
# VENDORED code is not style-linted here — it is single-sourced from
# safe-app-store/libs/subject-consent and linted there. UTETY still boundary-tests
# it (tests/test_boundaries.py walks utety/ including this dir), so the no-egress
# guarantee holds; only the cosmetic style gate is upstream's domain, not ours.
extend-exclude = ["utety/subject_consent"]

[tool.ruff.lint]
# A deliberately small, high-signal gate. Every rule family here maps to an
# error class the 2026-07-13 audit actually found or almost found:
#   F      pyflakes — undefined names, unused imports, shadowing
#   E4/7/9 pycodestyle errors — import placement, comparison, syntax
#   B      bugbear — mutable defaults, silent exceptions, loop-var capture
#   S1     bandit: assert-as-control (S101 = audit A4), exec/eval
#   S3     bandit: unsafe deserialization/protocols
#   S5/S6  bandit: weak crypto, injection-shaped string building
#   RUF    ruff-native correctness checks
select = ["F", "E4", "E7", "E9", "B", "S1", "S3", "S5", "S6", "RUF"]
# RUF001-003 flag typographic dashes/quotes as "ambiguous unicode"; this
# repo's docs and docstrings use them deliberately. Not an error class.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# Tests may use asserts (that's what they're for) and subprocess (the no-egress
# test intentionally spawns an interpreter).
"tests/*" = ["S101", "S603"]

[tool.coverage.report]
# VENDORED code is covered by its own suite upstream (safe-app-store/libs/
# subject-consent, 37 tests); UTETY's 90% floor measures UTETY's own code. The
# adoption still exercises it end-to-end via the SQLite backend — that coverage
# just isn't counted against this repo's floor.
omit = ["utety/subject_consent/*"]
